--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".SearchWord"></activity>
+        <activity android:name=".SearchWord"
+            android:windowSoftInputMode="stateHidden"/>
 
         <receiver android:name=".core.music.MediaButtonReceiver">
             <intent-filter>
